Fix issue of "TOP" text alignment

--- a/01-course/04-CSS-Layouts/style-flexbox.css
+++ b/01-course/04-CSS-Layouts/style-flexbox.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
 }
 
 body {
@@ -12,7 +12,8 @@ body {
 }
 
 .container{
-  width: 800px;
+  width: 1200px;
+
   margin: 0 auto;
 }
 
@@ -32,16 +33,32 @@ nav {
   margin-bottom: 40px;
 }
 
+/* FLEX CSS CODE  */
+.row{
+  display: flex;
+  gap: 75px;
+}
+
+aside {
+  flex: 0 0 300px;
+  align-self: flex-start;
+}
+article {
+  flex: 1 0 825px;
+  margin-bottom: 0;
+}
+
+/* FLEX CSS CODE  */
+
 article {
   margin-bottom: 60px;
 }
 
 aside {
-  width: 500px;
   background-color: #f7f7f7;
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
-  padding: 50px 0;
+  padding: 50px 40px;
 }
 
 h1,
@@ -56,11 +73,12 @@ h1 {
   font-style: italic;
 }
 
-/* h1::first-letter{
+ h1::first-letter{
   font-style: normal;
   margin: 5px;
 }
 
+/*
 h3 + p::first-line{
   color: red;
 } */
@@ -71,7 +89,7 @@ h2 {
   position: relative;
 }
 
-h2::after{
+h2::before{
   content: "TOP";
   background-color: #ffe70e;
   color: #444;
@@ -82,7 +100,7 @@ h2::after{
 
   position: absolute;
   right: -25px;
-  top: -15px;
+  top: -10px;
 }
 
 h3 {
@@ -93,6 +111,7 @@ h3 {
 
 h4 {
   font-size: 20px;
+  margin-bottom: 30px;
   text-transform: uppercase;
   text-align: center;
 }
@@ -105,7 +124,7 @@ p {
 
 ul,
 ol {
-  margin: 0 0 20px 50px;
+  margin: 0 0 20px 0;
 }
 
 li {
@@ -168,7 +187,7 @@ nav a:link{
   margin: 20px;
   padding: 20px;*/
   display: inline-block; 
-  margin: 10px 30px 0 0;
+  margin: 0 30px 0 0;
 }
 
 nav a:link:last-child{
@@ -182,4 +201,43 @@ button{
   position: absolute;
   bottom: 50px;
   right: 50px;
+}
+
+.main-header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.author-box{
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.author{
+  margin-bottom: 0;
+  margin-left: 15px;
+}
+
+.related-post{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+.related-link:link{
+  font-size: 17px;
+  font-weight: bold;
+  font-style: normal;
+  display: block;
+  margin-bottom: 5px;
+}
+
+.related-author{
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: italic;
 }
