--- a/01-course/04-CSS-Layouts/style-grid.css
+++ b/01-course/04-CSS-Layouts/style-grid.css
@@ -12,15 +12,18 @@ body {
 }
 
 .container{
-  width: 800px;
+  width: 1200px;
   margin: 0 auto;
 }
 
 .main-header {
   background-color: #f7f7f7;
   padding: 20px 40px;
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
   /* height: 80px; */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 nav {
@@ -37,11 +40,12 @@ article {
 }
 
 aside {
-  width: 500px;
+  /* width: 300px; */
+  padding: 50px 40px;
   background-color: #f7f7f7;
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
-  padding: 50px 0;
+  /* padding: 50px 0; */
 }
 
 h1,
@@ -93,6 +97,7 @@ h3 {
 
 h4 {
   font-size: 20px;
+  margin-bottom: 30px;
   text-transform: uppercase;
   text-align: center;
 }
@@ -105,7 +110,7 @@ p {
 
 ul,
 ol {
-  margin: 0 0 20px 50px;
+  /* margin: 0 0 20px 50px; */
 }
 
 li {
@@ -182,4 +187,47 @@ button{
   position: absolute;
   bottom: 50px;
   right: 50px;
+}
+
+.related-post{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+.related-link:link{
+  font-size: 17px;
+  font-weight: bold;
+  font-style: normal;
+  display: block;
+  margin-bottom: 5px;
+}
+
+.related-author{
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: italic;
+}
+
+
+.container{
+  display: grid;
+  grid-template-columns: 825px 300px;
+  column-gap: 75px;
+  row-gap: 60px;
+  align-items: center;
+}
+
+.main-header{
+  grid-column: 1 / -1;
+}
+
+footer{
+  grid-column: 1 / -1;
+}
+
+aside{
+  align-self: flex-start;
 }
